# proc-macro-workshop

./: .gitignore  README.md
bitfield/: Cargo.toml
bitfield/bit_parse/: Cargo.toml
bitfield/checks/: Cargo.toml
bitfield/checks/src/: lib.rs
bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/parse/: Cargo.toml
bitfield/parse/src/: lib.rs
bitfield/src/: lib.rs
bitfield/tests/: 04-multiple-of-8bits.stderr  09-variant-out-of-range.stderr  11-bits-attribute-wrong.stderr
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: progress.rs
debug/: Cargo.toml
debug/src/: lib.rs
debug/tests/: 05-phantom-data.rs  06-bound-trouble.rs  progress.rs
seq/: Cargo.toml
seq/src/: lib.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
