[package]
name = "bitfield-impl"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
# TODO
bitfield-parse = { path = "../parse" }
derive_debug = { path = "../../debug" }
syn = { version = "2.0.15", features = ["full"] }
proc-macro2 = "1.0.56"
quote = "1.0.26"
